# F1Trail

./: .gitignore  README.md  doxyfile_conf
.github/workflows/: generate_docs.yml
aruco_loc/: CMakeLists.txt  package.xml
aruco_loc/include/aruco_loc/: detection_node.hpp
aruco_loc/launch/: aruco_loc_launch.py
aruco_loc/src/: detection_node.cpp
clustering_proc/: CMakeLists.txt  package.xml
clustering_proc/config/: clustering_node.yaml
clustering_proc/include/clustering_proc/: clustering.hpp
clustering_proc/launch/: clustering_launch.py
clustering_proc/src/: clustering.cpp
docs/html/: annotated.html  aruco__loc__launch_8py.html  classClusteringNode-members.html  classClusteringNode.html  classClusteringNode__coll__graph.map  classClusteringNode__inherit__graph.md5  classImageDetectionNode-members.html  classImageDetectionNode.html  classImageDetectionNode__coll__graph.map  classImageDetectionNode__inherit__graph.md5  classKalmanFilter-members.html  classKalmanFilter.html  classSLStereoSplit-members.html  classSLStereoSplit.html  classSLStereoSplit__inherit__graph.map  classSLStereoSplit__inherit__graph.md5  classTrackerNode-members.html  classTrackerNode.html  classTrackerNode__coll__graph.map  classTrackerNode__coll__graph.md5  classTrackerNode__inherit__graph.map  classTrackerNode__inherit__graph.md5  classes.html  clustering_8cpp.html  clustering_8cpp__incl.map  clustering_8cpp__incl.md5  clustering_8hpp.html  clustering_8hpp__dep__incl.map  clustering_8hpp__dep__incl.md5  clustering_8hpp__incl.map  clustering_8hpp__incl.md5  clustering_8hpp_source.html  clustering__launch_8py.html  detection__node_8cpp.html  detection__node_8cpp__incl.map  detection__node_8cpp__incl.md5  detection__node_8hpp.html  detection__node_8hpp__dep__incl.map  detection__node_8hpp__dep__incl.md5  detection__node_8hpp__incl.map  (+117 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  namespaces_1.js  (+19 more)
f1trail/: CMakeLists.txt  package.xml
f1trail/launch/: device_nodes.py  f1trail_launch.py
pid_controller/: CMakeLists.txt
pid_controller/config/: longitudinal_pid.yaml
pid_controller/include/pid_controller/: longitudinal_pid.hpp
pid_controller/launch/: longitudinal_pid_launch.py
pid_controller/src/: longitudinal_pid.cpp
sl_stereo_proc/: CMakeLists.txt  package.xml
sl_stereo_proc/config/: split_stereo.yaml
sl_stereo_proc/include/sl_stereo_proc/: split_stereo.hpp
sl_stereo_proc/launch/: sl_stereo_proc_launch.py
sl_stereo_proc/src/: split_stereo.cpp
tracking_proc/: CMakeLists.txt  package.xml
tracking_proc/config/: tracking.yaml
tracking_proc/include/tracking_proc/: kalman_filter.hpp  tracker.hpp
tracking_proc/launch/: tracking_proc_launch.py
tracking_proc/src/: kalman_filter.cpp  tracker.cpp
