<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1trail</name>
  <version>0.0.0</version>
  <description>Meta-package for f1trail project: provides launch files to bootstrap nodes</description>
  <maintainer email="284427@studenti.unimore.it">qpits</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>zed_wrapper</depend>
  <depend>urg_node</depend>
  <depend>aruco_loc</depend>
  <depend>clustering_proc</depend>
  <depend>longitudinal_pid</depend>
  <depend>sl_stereo_proc</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
